# vidanueva

./: App.cpp  App.hpp  ButtonBar.hpp  CMakeLists.txt  ControlPanel.cpp  ControlPanel.hpp  DialogButtonBar.hpp  EditButtonBar.hpp  LoginWindow.cpp  LoginWindow.hpp  MainWindow.cpp  MainWindow.hpp  Page.cpp  Page.hpp  PageEdit.cpp  PageEdit.hpp  README  SessionHandle.cpp  SessionHandle.hpp  SessionManager.cpp  SessionManager.hpp  SessionStore.cpp  SessionStore.hpp  UserManager.cpp  UserManager.hpp  debug-run.sh  index.html  run.sh  setupDB.cpp  translate_tool.py  vidanueva.xml  witty.patch  wt-config.xml
messages/: ButtonBar.xml  ControlPanel.xml  DialogButtonBar.xml  EditButtonBar.xml  LoginWindow.xml  MainWindow.xml  Page.xml  PageEdit.xml  misc.xml
static-content/resources/themes/default/: forms.css
